# page_segmentation

./: .gitmodules  LICENSE  README.md  build.bat  build.sh  cmakewinx64.bat  test.bat  test.sh
segment/: CMakeLists.txt  segment.cpp
test_data/: convert.sh  coordinates.txt
