cmake_minimum_required(VERSION 2.8.9)
project(segment)
find_package(OpenCV REQUIRED PATHS "../opencv/build")
find_package(gflags REQUIRED PATHS "../gflags")
find_package(glog REQUIRED PATHS "../glog")
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(gflags)
include_directories(glog)
add_executable(segment segment.cpp)
target_link_libraries(segment ${OpenCV_LIBS})
target_link_libraries(segment gflags)
target_link_libraries(segment glog)